<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/input"
            android:layout_weight="0.5"
            android:inputType="none"
            android:gravity="right"
            android:editable="false"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/output"
            android:layout_weight="0.5"
            android:inputType="none"
            android:gravity="right"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:id="@+id/buttonSeven"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:id="@+id/buttonEight"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:id="@+id/buttonNine"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:id="@+id/buttonDivide"
                android:layout_weight="100" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:id="@+id/buttonFour"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:id="@+id/buttonFive"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:id="@+id/buttonSix"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:id="@+id/buttonMultiply"
                android:layout_weight="100" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:id="@+id/buttonOne"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:id="@+id/buttonTwo"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:id="@+id/buttonThree"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/buttonMinus"
                android:layout_weight="100" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/point"
                android:id="@+id/buttonPoint"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:id="@+id/buttonZero"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/equals"
                android:id="@+id/buttonEquals"
                android:layout_weight="100" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:id="@+id/buttonPlus"
                android:layout_weight="100" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>